k8s/api-Ib.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-lb
  namespace: devops-platform
  labels:
    app: api-service
spec:
  type: LoadBalancer
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
